--- a/liquidwar6/doc/msg-gdoc.texi
+++ b/liquidwar6/doc/msg-gdoc.texi
@@ -87,7 +87,7 @@ only in long multipart messages.
 @strong{Return value:}  newly allocated string.
 @end deftypefun
 
-@deftypefun {char *} {lw6msg_cmd_generate_meta} (int @var{serial}, int @var{i}, int @var{n}, int @var{reg}, int64_t @var{seq}, const char * @var{ker_msg})
+@deftypefun {char *} {lw6msg_cmd_generate_meta} (int @var{serial}, int @var{i}, int @var{n}, int @var{reg}, int64_t @var{seq}, const lw6msg_meta_array_t * @var{meta_array})
 @var{serial}:  the message serial number
 
 @var{i}:  the message index in the group
@@ -98,7 +98,7 @@ only in long multipart messages.
 
 @var{seq}:  the message seq (round + an offset)
 
-@var{ker_msg}:  the actual content of the message (passed to core algo)
+@var{meta_array}:  the content to send
 
 Generate a META command. Serial is an ever increasing number,
 i and n are most of the time 1 and 1, they are usefull
@@ -219,7 +219,7 @@ Analyzes a DATA message.
 @strong{Return value:}  1 on success, 0 on failure
 @end deftypefun
 
-@deftypefun {int} {lw6msg_cmd_analyse_meta} (int * @var{serial}, int * @var{i}, int * @var{n}, int * @var{reg}, int64_t * @var{seq}, char ** @var{ker_msg}, const char * @var{msg})
+@deftypefun {int} {lw6msg_cmd_analyse_meta} (int * @var{serial}, int * @var{i}, int * @var{n}, int * @var{reg}, int64_t * @var{seq}, lw6msg_meta_array_t * @var{meta_array}, const char * @var{msg})
 @var{serial}:  will contain serial number on success
 
 @var{i}:  will contain group index on success
@@ -230,7 +230,7 @@ Analyzes a DATA message.
 
 @var{seq}:  will contain seq on success (round + an offset)
 
-@var{ker_msg}:  will contain actual message on success
+@var{meta_array}:  will contain the content on success
 
 @var{msg}:  the message to analyze
 
