--- a/liquidwar6/doc/dat-gdoc.texi
+++ b/liquidwar6/doc/dat-gdoc.texi
@@ -340,3 +340,15 @@ send MISS commands, as it would overload the network for nothing.
 @strong{Return value:}  number of atom parts received since last reset.
 @end deftypefun
 
+@deftypefun {int} {lw6dat_warehouse_meta_put} (lw6dat_warehouse_t * @var{warehouse}, int64_t @var{seq})
+@var{warehouse}:  data warehouse to put message into
+
+@var{seq}:  seq to use to stamp the message
+
+Puts a META message in the warehouse. The META message purpose is
+to tell other warehouses (on other nodes, peers) that the list of peers
+is updated. This typically happens when a node joins in.
+
+@strong{Return value:}  1 on success, 0 if failed.
+@end deftypefun
+
