--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,8 +1,12 @@
-2012-02-08 : Christian Mauduit <ufoot@ufoot.org>
+2013-03-08 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Handicap patch by Epitech team.
+
+2013-02-08 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Implemented meta message handling in libmsg + reduced LW6MAP_MAX_NB_NODES.
 
-2012-02-06 : Christian Mauduit <ufoot@ufoot.org>
+2013-02-06 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Partly fixed mod-caca color problems.
 
@@ -10,43 +14,43 @@
 
 	* Implemented msg_meta parsing to list peers.
 
-2012-02-01 : Christian Mauduit <ufoot@ufoot.org>
+2013-02-01 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Integration of libcaca branch by Epitech team.
 
-2012-01-22 : Christian Mauduit <ufoot@ufoot.org>
+2013-01-22 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Trying (but failed) to fix 3rd peer connection problem.
 
-2012-01-19 : Christian Mauduit <ufoot@ufoot.org>
+2013-01-19 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added script funcs to test wether peers are connected/registered.
 
-2012-01-17 : Christian Mauduit <ufoot@ufoot.org>
+2013-01-17 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixed network NOP message reg/bootstrap problem.
 
-2012-01-12 : Christian Mauduit <ufoot@ufoot.org>
+2013-01-12 : Christian Mauduit <ufoot@ufoot.org>
 
 	* New lw6p2p functions to get draft and reference seqs.
 
-2012-01-08 : Christian Mauduit <ufoot@ufoot.org>
+2013-01-08 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added auto_release mode to fix libcaca key release issue.
 
-2012-01-06 : Christian Mauduit <ufoot@ufoot.org>
+2013-01-06 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added new Jenkins to handle doc & extra-maps separately.
 
-2012-01-04 : Christian Mauduit <ufoot@ufoot.org>
+2013-01-04 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added reg parameter to atoms to allow self-registration of nodes.
 
-2012-01-03 : Christian Mauduit <ufoot@ufoot.org>
+2013-01-03 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added functions to handle nodes without URLs in node_info.
 
-2012-01-02 : Christian Mauduit <ufoot@ufoot.org>
+2013-01-02 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Copyright 2012 -> 2013.
 
