--- a/liquidwar6/doc/mod-brute-gdoc.texi
+++ b/liquidwar6/doc/mod-brute-gdoc.texi
@@ -7,6 +7,15 @@ makes its GPL compatibility obvious. Having this declared is required.
 @strong{Return value:}  none
 @end deftypefun
 
+@deftypefun {void} {mod_brute_is_dlclose_safe} ()
+
+Defined to tell mod_brute has no dlclose issue, once can safely call
+lt_dlclose on it when done with it, without risking any segfault.
+Some other LW6 modules/shared libraries do have this problem.
+
+@strong{Return value:}  none
+@end deftypefun
+
 @deftypefun {lw6sys_module_pedigree_t *} {mod_brute_get_pedigree} ()
 
 Returns the pedigree for mod-brute, giving details about the module,
