--- a/liquidwar6/doc/dat-gdoc.texi
+++ b/liquidwar6/doc/dat-gdoc.texi
@@ -352,3 +352,17 @@ is updated. This typically happens when a node joins in.
 @strong{Return value:}  1 on success, 0 if failed.
 @end deftypefun
 
+@deftypefun {int} {lw6dat_warehouse_meta_get} (lw6dat_warehouse_t * @var{warehouse}, lw6msg_meta_array_t * @var{meta_array}, int64_t @var{seq})
+@var{warehouse}:  data warehouse to put message into
+
+@var{meta_array}:  current informations sendable by a meta message
+
+@var{seq}:  seq to use to stamp the message
+
+Gets the data required for a META message. Note that this function
+can be called in other contexts to know who is registered within the
+warehouse, which, as an opaque type, doesn't export that info otherwise.
+
+@strong{Return value:}  1 on success, 0 if failed.
+@end deftypefun
+
