--- a/liquidwar6/doc/dat-gdoc.texi
+++ b/liquidwar6/doc/dat-gdoc.texi
@@ -183,12 +183,10 @@ which means no interesting (complete) atoms where found, and
 there's probably nothing to do yet.
 @end deftypefun
 
-@deftypefun {int} {lw6dat_warehouse_put_local_msg} (lw6dat_warehouse_t * @var{warehouse}, const char * @var{msg}, int @var{reg})
+@deftypefun {int} {lw6dat_warehouse_put_local_msg} (lw6dat_warehouse_t * @var{warehouse}, const char * @var{msg})
 @var{warehouse}:  warehouse object to use
 
 @var{msg}:  message
-
-@var{reg}:  wether message should be a node-self-registering one
 
 Puts a message in the object. The message will be splitted into
 several atoms if needed, it can be arbitrary long.
