--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2013-06-05 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fine-tuned Jenkins scripts.
+
 2013-04-02 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Removed reg parameter from messages, superseded by META.
