--- a/liquidwar6/doc/funcs-selfdoc.texi
+++ b/liquidwar6/doc/funcs-selfdoc.texi
@@ -1296,6 +1296,11 @@ Wrapper on lw6snd_stop_music.
 Wrapper on lw6srv_get_backends.
 @end deffn
 
+@subsection c-lw6sys-build-get-abs-srcdir
+@deffn {C function exported to Guile} @code{c-lw6sys-build-get-abs-srcdir}
+Wrapper on lw6sys_build_get_abs_srcdir.
+@end deffn
+
 @subsection c-lw6sys-build-get-bin-id
 @deffn {C function exported to Guile} @code{c-lw6sys-build-get-bin-id}
 Wrapper on lw6sys_build_get_bin_id.
