--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2013-06-13 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed libp2p test suite.
+
 2013-06-12 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Updated GNULIB and dependencies, could fix #35168 'Wrong SHA1 sum on ppc'
