Using stamp as the third value of version number.

--- a/liquidwar6-extra-maps/ChangeLog
+++ b/liquidwar6-extra-maps/ChangeLog
@@ -1,3 +1,7 @@
+2013-06-23 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Using stamp as the third value of version number.
+
 2012-01-01 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Copyright 2011 -> 2012.
