--- a/liquidwar6/doc/version.texi
+++ b/liquidwar6/doc/version.texi
@@ -1,4 +1,4 @@
 @set UPDATED 1 February 2013
 @set UPDATED-MONTH February 2013
-@set EDITION 0.0.14beta
-@set VERSION 0.0.14beta
+@set EDITION 0.1.3404
+@set VERSION 0.1.3404
