--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2013-06-23 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Using stamp as the third value of version number.
+
 2013-06-13 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixed libp2p test suite.
