--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2013-06-24 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Not updating stamp by default unless LW6_STAMP_AUTO is set.
+
 2013-06-23 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Using stamp as the third value of version number.
