--- a/liquidwar6/doc/tsk-gdoc.texi
+++ b/liquidwar6/doc/tsk-gdoc.texi
@@ -103,10 +103,19 @@ Returns the current stage of the loader.
 dynamic stuff such as game_state.
 @end deftypefun
 
-@deftypefun {int} {lw6tsk_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6tsk_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
-Runs the @code{tsk} module test suite.
+Registers all tests for the libtsk module.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6tsk_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Runs the @code{tsk} module test suite, testing most (if not all...)
+functions.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
