--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2013-06-29 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Migrated all tests to CUnit, and added --cunit run-time option.
+
 2013-06-28 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Introducing CUnit usage.
