--- a/liquidwar6/doc/bot-gdoc.texi
+++ b/liquidwar6/doc/bot-gdoc.texi
@@ -75,11 +75,19 @@ properly uninitialized before.
 @strong{Return value:}  none.
 @end deftypefun
 
-@deftypefun {int} {lw6bot_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6bot_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
-Runs the @code{bot} module test suite. Will try several engines
-and query basic moves.
+Registers all tests for the libbot module.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6bot_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Runs the @code{bot} module test suite, testing most (if not all...)
+functions.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
