--- a/liquidwar6/doc/cfg-gdoc.texi
+++ b/liquidwar6/doc/cfg-gdoc.texi
@@ -231,10 +231,19 @@ Overwrites the config file with defaults.
 Use this to get rid of old configurations.
 @end deftypefun
 
-@deftypefun {int} {lw6cfg_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6cfg_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
-Runs the @code{cfg} module test suite.
+Registers all tests for the libcfg module.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6cfg_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Runs the @code{cfg} module test suite, testing most (if not all...)
+functions.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
