--- a/liquidwar6/doc/cli-gdoc.texi
+++ b/liquidwar6/doc/cli-gdoc.texi
@@ -182,10 +182,19 @@ Destroys a cli backend.
 @strong{Return value:}  none.
 @end deftypefun
 
-@deftypefun {int} {lw6cli_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6cli_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
-Runs the @code{cli} module test suite.
+Registers all tests for the libcli module.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6cli_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Runs the @code{cli} module test suite, testing most (if not all...)
+functions.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
