--- a/liquidwar6/doc/cnx-gdoc.texi
+++ b/liquidwar6/doc/cnx-gdoc.texi
@@ -170,10 +170,19 @@ clear and checksumed values, so it can be in any form.
 @strong{Return value:}  1 if OK, passwords are the same, 0 if not.
 @end deftypefun
 
-@deftypefun {int} {lw6cnx_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6cnx_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
-Runs the @code{cnx} module test suite.
+Registers all tests for the libcnx module.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6cnx_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Runs the @code{cnx} module test suite, testing most (if not all...)
+functions.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
