--- a/liquidwar6/doc/dsp-gdoc.texi
+++ b/liquidwar6/doc/dsp-gdoc.texi
@@ -146,12 +146,20 @@ before any use. Think of it as a raw memset.
 @strong{Return value:}  none.
 @end deftypefun
 
-@deftypefun {int} {lw6dsp_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6dsp_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
-Runs the test suite for the dsp module. In check (0) mode, won't
-test much to avoid failure because of missing graphical environment.
+Registers all tests for the libdsp module.
 
-@strong{Return value:}  1 if OK, 0 if error.
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6dsp_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Runs the @code{dsp} module test suite, testing most (if not all...)
+functions.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
 
