--- a/liquidwar6/doc/dyn-gdoc.texi
+++ b/liquidwar6/doc/dyn-gdoc.texi
@@ -134,12 +134,19 @@ to external dynamic library which will only be loaded at runtime.
 @strong{Return value:}  the full path of the .so file, needs to be freed.
 @end deftypefun
 
-@deftypefun {int} {lw6dyn_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6dyn_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Registers all tests for the libdyn module.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6dyn_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
 Runs the @code{dyn} module test suite, testing most (if not all...)
-functions. Will try to load libraries and query them for
-standard LW6-expected functions.
+functions.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
