--- a/liquidwar6/doc/gen-gdoc.texi
+++ b/liquidwar6/doc/gen-gdoc.texi
@@ -36,10 +36,19 @@ Returns a random char suitable for seed (letter or digit).
 @strong{Return value:}  a single char
 @end deftypefun
 
-@deftypefun {int} {lw6gen_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6gen_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
-Runs the @code{gen} module test suite.
+Registers all tests for the libgen module.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6gen_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Runs the @code{gen} module test suite, testing most (if not all...)
+functions.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
