--- a/liquidwar6/doc/glb-gdoc.texi
+++ b/liquidwar6/doc/glb-gdoc.texi
@@ -135,10 +135,19 @@ Calculates an SHA-1 sum of a string, using key to seed calc.
 @strong{Return value:}  a 32-bit unsigned integer
 @end deftypefun
 
-@deftypefun {int} {lw6glb_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6glb_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
-Runs the @code{glb} module test suite.
+Registers all tests for the libglb module.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6glb_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Runs the @code{glb} module test suite, testing most (if not all...)
+functions.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
