--- a/liquidwar6/doc/gui-gdoc.texi
+++ b/liquidwar6/doc/gui-gdoc.texi
@@ -1351,12 +1351,21 @@ edge.
 @strong{Return value:}  none.
 @end deftypefun
 
-@deftypefun {int} {lw6gui_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6gui_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
-Run tests in the gui module.
+Registers all tests for the libgui module.
 
-@strong{Return value:}  1 if successfull, 0 if failed.
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6gui_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Runs the @code{gui} module test suite, testing most (if not all...)
+functions.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
 
 @deftypefun {int} {lw6gui_triangle_is_inside_rect} (lw6gui_triangle_t * @var{triangle}, lw6gui_rect_t * @var{rect})
