--- a/liquidwar6/doc/hlp-gdoc.texi
+++ b/liquidwar6/doc/hlp-gdoc.texi
@@ -285,10 +285,19 @@ end of the program.
 @strong{Return value:}  1 on success, 0 if failed
 @end deftypefun
 
-@deftypefun {int} {lw6hlp_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6hlp_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
-Runs the @code{hlp} module test suite.
+Registers all tests for the libhlp module.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6hlp_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Runs the @code{hlp} module test suite, testing most (if not all...)
+functions.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
