--- a/liquidwar6/doc/img-gdoc.texi
+++ b/liquidwar6/doc/img-gdoc.texi
@@ -31,10 +31,19 @@ Frees a JPEG screenshot.
 @strong{Return value:}  none.
 @end deftypefun
 
-@deftypefun {int} {lw6img_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6img_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
-Runs the @code{img} module test suite.
+Registers all tests for the libimg module.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6img_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Runs the @code{img} module test suite, testing most (if not all...)
+functions.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
