--- a/liquidwar6/doc/ldr-gdoc.texi
+++ b/liquidwar6/doc/ldr-gdoc.texi
@@ -615,10 +615,19 @@ it will override the existing teams.
 @strong{Return value:}  1 if success, 0 if failed.
 @end deftypefun
 
-@deftypefun {int} {lw6ldr_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6ldr_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
-Runs the @code{ldr} module test suite.
+Registers all tests for the libldr module.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6ldr_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Runs the @code{ldr} module test suite, testing most (if not all...)
+functions.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
