--- a/liquidwar6/doc/map-gdoc.texi
+++ b/liquidwar6/doc/map-gdoc.texi
@@ -933,10 +933,19 @@ Compares the contents of two teams structs.
 @strong{Return value:}  1 if they contain the same thing, 0 if not
 @end deftypefun
 
-@deftypefun {int} {lw6map_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6map_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
-Runs the @code{map} module test suite.
+Registers all tests for the libmap module.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6map_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Runs the @code{map} module test suite, testing most (if not all...)
+functions.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
