--- a/liquidwar6/doc/msg-gdoc.texi
+++ b/liquidwar6/doc/msg-gdoc.texi
@@ -407,10 +407,19 @@ will sort with lower seq number first.
 1 if @code{list_a} > @code{list_b}
 @end deftypefun
 
-@deftypefun {int} {lw6msg_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6msg_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
-Runs the @code{nod} module test suite.
+Registers all tests for the libmsg module.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6msg_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Runs the @code{msg} module test suite, testing most (if not all...)
+functions.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
