--- a/liquidwar6/doc/net-gdoc.texi
+++ b/liquidwar6/doc/net-gdoc.texi
@@ -353,12 +353,19 @@ close in on the fly.
 @strong{Return value:}  1 if alive, 0 if not.
 @end deftypefun
 
-@deftypefun {int} {lw6net_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6net_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
-Runs the @code{net} module test suite. This one could fail if some
-sockets are already bound, for instance. It's still run even
-in check-only (mode=0) mode.
+Registers all tests for the libnet module.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6net_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Runs the @code{net} module test suite, testing most (if not all...)
+functions.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
