--- a/liquidwar6/doc/nod-gdoc.texi
+++ b/liquidwar6/doc/nod-gdoc.texi
@@ -339,10 +339,19 @@ This function does perform a lock/unlock so it is safe.
 @strong{Return value:}  none.
 @end deftypefun
 
-@deftypefun {int} {lw6nod_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6nod_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
-Runs the @code{nod} module test suite.
+Registers all tests for the libnod module.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6nod_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Runs the @code{nod} module test suite, testing most (if not all...)
+functions.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
