--- a/liquidwar6/doc/p2p-gdoc.texi
+++ b/liquidwar6/doc/p2p-gdoc.texi
@@ -466,13 +466,19 @@ treated.
 @strong{Return value:}  newly allocated string, must be freed.
 @end deftypefun
 
-@deftypefun {int} {lw6p2p_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6p2p_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
-Runs the @code{p2p} module test suite. This test can fail if one
-cannot bind on some network port, in a general manner it is
-dependent on the network environment, so it's better if there's
-some sort of human control on it.
+Registers all tests for the libp2p module.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6p2p_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Runs the @code{p2p} module test suite, testing most (if not all...)
+functions.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
