--- a/liquidwar6/doc/pil-gdoc.texi
+++ b/liquidwar6/doc/pil-gdoc.texi
@@ -736,10 +736,19 @@ are expected.
 @strong{Return value:}  none, everything in out params
 @end deftypefun
 
-@deftypefun {int} {lw6pil_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6pil_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
-Runs the @code{pil} module test suite.
+Registers all tests for the libpil module.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6pil_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Runs the @code{pil} module test suite, testing most (if not all...)
+functions.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
