--- a/liquidwar6/doc/scm-gdoc.texi
+++ b/liquidwar6/doc/scm-gdoc.texi
@@ -65,10 +65,19 @@ c-my-func.
 @strong{Return value:}  new allocated string.
 @end deftypefun
 
-@deftypefun {int} {lw6scm_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6scm_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
-Runs the @code{scm} module test suite.
+Registers all tests for the libscm module.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6scm_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Runs the @code{scm} module test suite, testing most (if not all...)
+functions.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
