--- a/liquidwar6/doc/sim-gdoc.texi
+++ b/liquidwar6/doc/sim-gdoc.texi
@@ -72,10 +72,19 @@ with the most popular bot.
 @strong{Return value:}  1 on success, 0 on failure.
 @end deftypefun
 
-@deftypefun {int} {lw6sim_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6sim_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
-Runs the @code{sim} module test suite.
+Registers all tests for the libsim module.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6sim_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Runs the @code{sim} module test suite, testing most (if not all...)
+functions.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
