--- a/liquidwar6/doc/snd-gdoc.texi
+++ b/liquidwar6/doc/snd-gdoc.texi
@@ -172,12 +172,19 @@ properly uninitialized before.
 @strong{Return value:}  none.
 @end deftypefun
 
-@deftypefun {int} {lw6snd_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6snd_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
-Runs the @code{snd} module test suite. If run in check mode (0),
-won't really perform the test, since it could fail because
-of hardware problems, context, permissions...
+Registers all tests for the libsnd module.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6snd_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Runs the @code{snd} module test suite, testing most (if not all...)
+functions.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
