--- a/liquidwar6/doc/srv-gdoc.texi
+++ b/liquidwar6/doc/srv-gdoc.texi
@@ -286,10 +286,19 @@ Frees a tcp_accepter object.
 @strong{Return value:}  none
 @end deftypefun
 
-@deftypefun {int} {lw6srv_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6srv_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
-Runs the @code{srv} module test suite.
+Registers all tests for the libsrv module.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6srv_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Runs the @code{srv} module test suite, testing most (if not all...)
+functions.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
