--- a/liquidwar6/doc/vox-gdoc.texi
+++ b/liquidwar6/doc/vox-gdoc.texi
@@ -14,10 +14,19 @@ Frees a voxel rendering object (todo, not implemented yet).
 @strong{Return value:}  none
 @end deftypefun
 
-@deftypefun {int} {lw6vox_test} (int @var{mode})
-@var{mode}:  0 for check only, 1 for full test
+@deftypefun {int} {lw6vox_test_register} (int @var{mode})
+@var{mode}:  test mode (bitmask)
 
-Runs the @code{vox} module test suite.
+Registers all tests for the libvox module.
+
+@strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6vox_test_run} (int @var{mode})
+@var{mode}:  test mode (bitmask)
+
+Runs the @code{vox} module test suite, testing most (if not all...)
+functions.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
