Allowing console only if TERM has well-known working values.

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2013-07-11 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Allowing console only if TERM has well-known working values.
+
 	* Added support for timeout in Gtk dialogs.
 
 2013-07-06 : Christian Mauduit <ufoot@ufoot.org>
