--- a/liquidwar6/doc/cns-gdoc.texi
+++ b/liquidwar6/doc/cns-gdoc.texi
@@ -29,11 +29,18 @@ it's NULL or empty.
 @strong{Return value:}  none.
 @end deftypefun
 
-@deftypefun {int} {lw6cns_support} ()
+@deftypefun {int} {lw6cns_console_support} ()
 
 Tells wether console is supported.
 
 @strong{Return value:}  1 if console can be enabled, 0 if not
+@end deftypefun
+
+@deftypefun {int} {lw6cns_term_support} ()
+
+Tells wether program is likely to have proper term (xterm, Linux console) support.
+
+@strong{Return value:}  1 if has validated TERM support, 0 if not
 @end deftypefun
 
 @deftypefun {int} {lw6cns_test_register} (int @var{mode})
