--- a/liquidwar6/doc/liquidwar6-gdoc.texi
+++ b/liquidwar6/doc/liquidwar6-gdoc.texi
@@ -353,6 +353,15 @@ Displays the list of modules compiled with the game.
 @strong{Return value:}  none
 @end deftypefun
 
+@deftypefun {void} {lw6_print_credits} ()
+
+Displays all credits on stdout, those should be available elsewhere
+within the game (typically on splash screen) but it's good to be able
+to show them "standalone".
+
+@strong{Return value:}  none
+@end deftypefun
+
 @deftypefun {void} {lw6_print_list_quick} ()
 
 Displays the list of 'quick' options.
