--- a/liquidwar6-extra-maps/debian/changelog
+++ b/liquidwar6-extra-maps/debian/changelog
@@ -1,3 +1,9 @@
+liquidwar6-extra-maps (0.1.3465-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Sat, 13 Jul 2013 09:16:52 +0200
+
 liquidwar6-extra-maps (0.1.3464-1vendor) unstable; urgency=low
 
   * Bump version
