--- a/liquidwar6/debian/changelog
+++ b/liquidwar6/debian/changelog
@@ -1,3 +1,9 @@
+liquidwar6 (0.1.3466-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Sat, 13 Jul 2013 14:34:28 +0200
+
 liquidwar6 (0.1.3465-0vendor) unstable; urgency=low
 
   * Bump version
