--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2013-07-19 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed RPM packaging.
+
 2013-07-12 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added --credits command line option.
