Fixed merge with http://git.aufrinfo.net/git/pfa/liquidwar6.git

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2013-07-24 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Merged with http://git.aufrinfo.net/git/pfa/liquidwar6.git
+
 2013-07-19 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixed RPM packaging.
