--- a/liquidwar6/debian/changelog
+++ b/liquidwar6/debian/changelog
@@ -1,3 +1,15 @@
+liquidwar6 (0.1.3470-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Wed, 24 Jul 2013 21:45:29 +0200
+
+liquidwar6 (0.1.3469-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Wed, 24 Jul 2013 21:35:55 +0200
+
 liquidwar6 (0.1.3468-0vendor) unstable; urgency=low
 
   * Bump version
