--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2013-10-15 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Added MSYS dedicated Jenkins script.
+
 2013-10-12 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Switched to aclocal-1.14.
