Minor doc update to handle gdoc/texinfo parsing problem.

--- a/liquidwar6/debian/changelog
+++ b/liquidwar6/debian/changelog
@@ -1,3 +1,9 @@
+liquidwar6 (0.1.3471-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Wed, 16 Oct 2013 09:19:57 +0200
+
 liquidwar6 (0.1.3470-0vendor) unstable; urgency=low
 
   * Bump version
