--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2013-10-16 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Minor doc update to handle gdoc/texinfo parsing problem.
+
 2013-10-15 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Put ./configure and Makefile.in files again in repo.
