--- a/liquidwar6-extra-maps/debian/changelog
+++ b/liquidwar6-extra-maps/debian/changelog
@@ -1,3 +1,9 @@
+liquidwar6-extra-maps (0.1.3472-0vendor) unstable; urgency=low
+
+  * Bump version
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Wed, 16 Oct 2013 09:43:20 +0200
+
 liquidwar6-extra-maps (0.1.3471-0vendor) unstable; urgency=low
 
   * Bump version
